workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/TransferenciaCorretagem__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazernará os dados relativos às transferências de corretagem.</description>
    <label>Transferência de Corretagem</label>
    <nameField>
        <displayFormat>TC{000000}</displayFormat>
        <label>Código da Transferência</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transferências de Corretagens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>