workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/ChaveContrato__c.field-meta.xml
<CustomField>
    <fullName>ChaveContrato__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ContratoTransferido__c, ContratoTransferido__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&apos;Nome&apos; do contrato</inlineHelpText>
    <label>Chave Contrato</label>
    <type>Text</type>
</CustomField>