workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/CodCor__c.field-meta.xml
<CustomField>
    <fullName>CodCor__c</fullName>
    <description>Teste</description>
    <formula>SusepOriginal__r.Name</formula>
    <label>Código do corretor atual</label>
    <type>Text</type>
</CustomField>