workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/ContratoTransferido__c.field-meta.xml
<CustomField>
    <fullName>ContratoTransferido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contrato cuja susep será transferida.</description>
    <inlineHelpText>Escolha o Contrato para a transferência de susep (deixe em branco caso tenha marcado o campo Transferir Carteira)</inlineHelpText>
    <label>Contrato</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contract.CodigoCorretor__c</field>
            <operation>equals</operation>
            <valueField>$Source.SusepOriginal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Transferências de Corretagens</relationshipLabel>
    <relationshipName>DadosContratoTransferido</relationshipName>
    <type>Lookup</type>
</CustomField>