workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/PercPriCoCorretor__c.field-meta.xml
<CustomField>
    <fullName>PercPriCoCorretor__c</fullName>
    <description>Percentual para o primeiro co-corretor</description>
    <inlineHelpText>Participação Susep Co-corretagem</inlineHelpText>
    <label>Participação (%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>