workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/PercSusepLider__c.field-meta.xml
<CustomField>
    <fullName>PercSusepLider__c</fullName>
    <description>Percentual para o corretor (Líder)</description>
    <inlineHelpText>Participação Susep Líder</inlineHelpText>
    <label>Participação (%)</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>