workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/SusepAtual__c.field-meta.xml
<CustomField>
    <fullName>SusepAtual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Susep para a qual o contrato será transferido.</description>
    <inlineHelpText>Escolha a nova susep</inlineHelpText>
    <label>Transferir para corretor líder</label>
    <referenceTo>DadosCorretor__c</referenceTo>
    <relationshipName>DadosCorretorAtual</relationshipName>
    <type>Lookup</type>
</CustomField>