workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/SusepOriginal__c.field-meta.xml
<CustomField>
    <fullName>SusepOriginal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Armazena a susep original do contrato.</description>
    <inlineHelpText>Corretor atual do contrato</inlineHelpText>
    <label>Código do corretor atual</label>
    <referenceTo>DadosCorretor__c</referenceTo>
    <relationshipLabel>Transferências de Corretagens</relationshipLabel>
    <relationshipName>DadosCorretorOriginal</relationshipName>
    <type>Lookup</type>
</CustomField>