workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/SusepPriCoCorretagem__c.field-meta.xml
<CustomField>
    <fullName>SusepPriCoCorretagem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primeira susep de Co-corretagem</description>
    <inlineHelpText>Primeiro Co-corretor</inlineHelpText>
    <label>Transferir co-corretagem para</label>
    <referenceTo>DadosCorretor__c</referenceTo>
    <relationshipName>Transferencias_de_Corretagens</relationshipName>
    <type>Lookup</type>
</CustomField>