workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/SusepQuaCoCorretagem__c.field-meta.xml
<CustomField>
    <fullName>SusepQuaCoCorretagem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quarta susep de Co-corretagem</description>
    <inlineHelpText>Quarto Co-corretor</inlineHelpText>
    <label>Transferir co-corretagem para</label>
    <referenceTo>DadosCorretor__c</referenceTo>
    <relationshipName>Transferencias_de_Corretagens3</relationshipName>
    <type>Lookup</type>
</CustomField>