workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/SusepQuiCoCorretagem__c.field-meta.xml
<CustomField>
    <fullName>SusepQuiCoCorretagem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quinta susep de Co-corretagem</description>
    <inlineHelpText>Quinto Co-corretor</inlineHelpText>
    <label>Transferir co-corretagem para</label>
    <referenceTo>DadosCorretor__c</referenceTo>
    <relationshipName>Transferencias_de_Corretagens4</relationshipName>
    <type>Lookup</type>
</CustomField>