workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/SusepSegCoCorretagem__c.field-meta.xml
<CustomField>
    <fullName>SusepSegCoCorretagem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Segunda susep de Co-corretagem</description>
    <inlineHelpText>Segundo Co-corretor</inlineHelpText>
    <label>Transferir co-corretagem para</label>
    <referenceTo>DadosCorretor__c</referenceTo>
    <relationshipName>Transferencias_de_Corretagens1</relationshipName>
    <type>Lookup</type>
</CustomField>