workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/SusepTerCoCorretagem__c.field-meta.xml
<CustomField>
    <fullName>SusepTerCoCorretagem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Terceira susep de Co-corretagem</description>
    <inlineHelpText>Terceiro Co-corretor</inlineHelpText>
    <label>Transferir co-corretagem para</label>
    <referenceTo>DadosCorretor__c</referenceTo>
    <relationshipName>Transferencias_de_Corretagens2</relationshipName>
    <type>Lookup</type>
</CustomField>