workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/TransferirCarteira__c.field-meta.xml
<CustomField>
    <fullName>TransferirCarteira__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se serão tranferidos todos os contratos para nova susep ou apenas um único.</description>
    <inlineHelpText>Marque para transferir todos os contratos</inlineHelpText>
    <label>Transferir Carteira</label>
    <type>Checkbox</type>
</CustomField>