workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/fields/ValidoAte__c.field-meta.xml
<CustomField>
    <fullName>ValidoAte__c</fullName>
    <description>Período no qual a transferência é válida para a nova susep.</description>
    <inlineHelpText>Validade da transferência</inlineHelpText>
    <label>Válido Até</label>
    <type>Date</type>
</CustomField>