workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/validationRules/ControleDeValorPercentual.validationRule-meta.xml
<ValidationRule>
    <fullName>ControleDeValorPercentual</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    IF(ISBLANK(PercSusepLider__c), 0, PercSusepLider__c) &gt; 100, IF(ISBLANK( PercSusepLider__c), 0, PercSusepLider__c) &lt; 0,
    IF(ISBLANK(PercPriCoCorretor__c), 0, PercPriCoCorretor__c) &gt; 100, IF(ISBLANK(PercPriCoCorretor__c), 0, PercPriCoCorretor__c) &lt; 0,
    IF(ISBLANK(PercSegCoCorretor__c), 0, PercSegCoCorretor__c) &gt; 100, IF(ISBLANK(PercSegCoCorretor__c), 0, PercSegCoCorretor__c) &lt; 0,
    IF(ISBLANK(PercTerCoCorretor__c), 0, PercTerCoCorretor__c) &gt; 100, IF(ISBLANK(PercTerCoCorretor__c), 0, PercTerCoCorretor__c) &lt; 0,
    IF(ISBLANK(PercQuaCoCorretor__c), 0, PercQuaCoCorretor__c) &gt; 100, IF(ISBLANK(PercQuaCoCorretor__c), 0, PercQuaCoCorretor__c) &lt; 0,
    IF(ISBLANK(PercQuiCoCorretor__c), 0, PercQuiCoCorretor__c) &gt; 100, IF(ISBLANK(PercQuiCoCorretor__c), 0, PercQuiCoCorretor__c) &lt; 0,
    IF(ISBLANK(PercSusepLider__c), 0, PercSusepLider__c) +
    IF(ISBLANK(PercPriCoCorretor__c), 0, PercPriCoCorretor__c) +
    IF(ISBLANK(PercSegCoCorretor__c), 0, PercSegCoCorretor__c) +
    IF(ISBLANK(PercTerCoCorretor__c), 0, PercTerCoCorretor__c) +
    IF(ISBLANK(PercQuaCoCorretor__c), 0, PercQuaCoCorretor__c) +
    IF(ISBLANK(PercQuiCoCorretor__c), 0, PercQuiCoCorretor__c) &gt; 100,
    IF(ISBLANK(PercSusepLider__c), 0, PercSusepLider__c) +
    IF(ISBLANK(PercPriCoCorretor__c), 0, PercPriCoCorretor__c) +
    IF(ISBLANK(PercSegCoCorretor__c), 0, PercSegCoCorretor__c) +
    IF(ISBLANK(PercTerCoCorretor__c), 0, PercTerCoCorretor__c) +
    IF(ISBLANK(PercQuaCoCorretor__c), 0, PercQuaCoCorretor__c) +
    IF(ISBLANK(PercQuiCoCorretor__c), 0, PercQuiCoCorretor__c) &lt; 100
)</errorConditionFormula>
    <errorMessage>Os valores individuais dos percentuais não podem ser menores que 0 ou maiores que 100, bem como a soma geral dos percentuais deve, obrigatoriamente, ser igual a 100.</errorMessage>
</ValidationRule>