workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/validationRules/ValidaPreenchimentoSusepParticipacao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaPreenchimentoSusepParticipacao</fullName>
    <active>true</active>
    <description>Valida o preenchimento de susep de co-corretagem e suas respectivas participações</description>
    <errorConditionFormula>OR(
AND(
	NOT(ISBLANK(SusepAtual__c)),ISBLANK(PercSusepLider__c)),
AND(
	NOT(ISBLANK(PercSusepLider__c)),ISBLANK(SusepAtual__c)),

AND(
	NOT(ISBLANK(SusepPriCoCorretagem__c)),ISBLANK(PercPriCoCorretor__c)),
AND(
	NOT(ISBLANK(PercPriCoCorretor__c)),ISBLANK(SusepPriCoCorretagem__c)),

AND(
	NOT(ISBLANK(SusepSegCoCorretagem__c)),ISBLANK(PercSegCoCorretor__c)),
AND(
	NOT(ISBLANK(PercSegCoCorretor__c)),ISBLANK(SusepSegCoCorretagem__c)),

AND(
	NOT(ISBLANK(SusepTerCoCorretagem__c)),ISBLANK(PercTerCoCorretor__c)),
AND(
	NOT(ISBLANK(PercTerCoCorretor__c)),ISBLANK(SusepTerCoCorretagem__c)),

AND(
	NOT(ISBLANK(SusepQuaCoCorretagem__c)),ISBLANK(PercQuaCoCorretor__c)),
AND(
	NOT(ISBLANK(PercQuaCoCorretor__c)),ISBLANK(SusepQuaCoCorretagem__c)),

AND(
	NOT(ISBLANK(SusepQuiCoCorretagem__c)),ISBLANK(PercQuiCoCorretor__c)),
AND(
	NOT(ISBLANK(PercQuiCoCorretor__c)),ISBLANK(SusepQuiCoCorretagem__c))
)</errorConditionFormula>
    <errorMessage>Quando a susep de co-corretor for preenchida, o mesmo deve ocorrer ao percentual e vice-versa.</errorMessage>
</ValidationRule>