workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/validationRules/ValidaSusepAtual.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaSusepAtual</fullName>
    <active>true</active>
    <description>Verifica se o campo SusepAtual__c está preenchido</description>
    <errorConditionFormula>ISBLANK(SusepAtual__c)</errorConditionFormula>
    <errorMessage>O campo Transferir para deve ser preenchido</errorMessage>
</ValidationRule>