workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/validationRules/ValidaSusepOriginal.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaSusepOriginal</fullName>
    <active>true</active>
    <description>Verifica se o campo SusepOriginal__c está preenchido</description>
    <errorConditionFormula>ISBLANK(SusepOriginal__c)</errorConditionFormula>
    <errorMessage>O campo Código do corretor atual deve ser preenchido</errorMessage>
</ValidationRule>