workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/validationRules/ValidaTransfCtrCarteira.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaTransfCtrCarteira</fullName>
    <active>true</active>
    <description>Verifica se o campo ContratoTransferido__c não está preenchido quando o campo TransferirCarteira__c está marcado (true)</description>
    <errorConditionFormula>AND(
TransferirCarteira__c = true,
NOT(ISBLANK(ContratoTransferido__c))
)</errorConditionFormula>
    <errorMessage>O campo Contrato deve ser deixado em branco (vazio) quando marcamos Transferir Carteira</errorMessage>
</ValidationRule>