workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/validationRules/ValidaTransfCtrIndividual.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaTransfCtrIndividual</fullName>
    <active>true</active>
    <description>Verifica se o campo ContratoTransferido__c está preenchido quando o campo TransferirCarteira__c não está marcado (false)</description>
    <errorConditionFormula>AND(
TransferirCarteira__c = false,
ISBLANK(ContratoTransferido__c)
)</errorConditionFormula>
    <errorMessage>O campo Contrato deve ser preenchido quando não marcamos Transferir Carteira</errorMessage>
</ValidationRule>