workspace-sf/force-app/main/default/objects/TransferenciaCorretagem__c/validationRules/ValidaValidoAte.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaValidoAte</fullName>
    <active>true</active>
    <description>Verifica se o campo ValidoAte__c está preenchido</description>
    <errorConditionFormula>OR
(ISBLANK(ValidoAte__c),
 ValidoAte__c&lt;TODAY()
)</errorConditionFormula>
    <errorMessage>O valor do campo Valido Até não pode ser menor que a data de hoje e não deve ser deixado em branco</errorMessage>
</ValidationRule>